fix particles in background on mobile and more

--- a/style-projects.css
+++ b/style-projects.css
@@ -23,7 +23,8 @@ body, html {
 
     background-color: #181a1b;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
 
     font-family: system-ui, -apple-system, var(--font-family), Roboto, sans-serif;
     font-style: normal;
@@ -32,15 +33,6 @@ body, html {
     scroll-behavior: smooth;
     position: relative;
     overflow: hidden;
-}
-
-body, html {
-    min-height: 100vh;
-}
-
-a{
-    color:inherit;
-    text-decoration: none;
 }
 
 @font-face {
@@ -93,21 +85,24 @@ h1 {
 
     display: flex;
     justify-content: center;
-    align-self: center;
-    align-items: center;
     flex-direction: column;
-    gap: 6vh;
-}
-.languageSwitch{
-    z-index: 53;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
+    gap: 24px;
 }
 
-.languageSwitch p{
-    z-index: 4;
+.links {
+    /*position: relative;*/
+    z-index: 1;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+
+    border: 3px;
+    text-shadow: 0 0 10px #ffffff;
+}
+
+.links a {
     padding: 10px 20px;
 
     max-width: max-content;
@@ -119,121 +114,31 @@ h1 {
     align-items: center;
     text-align: center;
 
-    opacity: 90%;
     background-color: #2f2f2f;
     border-radius: 16px;
 
     font: 500 16px/24px var(--font-family);
     color: #FFF;
-
-    box-shadow: 0 0 10px #3b3838;
-
-    transition: color 0.5s ease, opacity 0.5s ease, background-color 0.5s ease, transform 0.4s ease;
-}
-
-.languageSwitch p:hover {
-    background-color: #111;
-    box-shadow: 0 0 20px #8006da;
-    text-shadow: 0 0 20px #8006da;
-    transform: scale(1.1);
-}
-
-
-.about_content{
-
-    color: #fff;
-
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-
-    display: flex;
-    flex-direction: column;
-    gap: 36px;
-
-    height: max-content;
-    width: max-content;
-    max-width: 100vw;
-}
-
-main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    flex-direction: column;
-    gap: 36px;
-
-    height: max-content;
-    width: max-content;
-}
-
-.info{
-    z-index: 4;
-    position: relative;
-
-    background-color: #3b3838;
-    opacity: 80%;
-    border-radius: 20px;
-
-
-    padding: 20px;
-    margin: 10px;
-
-    clip-path: border-box;
-    max-width: max-content;
-    max-height: max-content;
-    width: 50vw;
-    height: max-content;
-
-    /*left: 10%;*/
-    gap: 36px;
-
-    border: 3px;
-}
-
-.info a{
-    text-decoration: underline;
-}
-
-.back{
-    padding: 50px;
-}
-
-.back{
-    padding:3vh;
-}
-.back a{
-    z-index: 4;
-    position: absolute;
-
-    padding: 10px;
-
-    max-width: max-content;
-    width: 100%;
-    min-width: 122px;
-
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-    opacity: 80%;
-    background-color: #2f2f2f;
-    border-radius: 16px;
-    font: 500 16px/24px var(--font-family);
-    color: #fff;
-    box-shadow: 0 0 10px #3b3838;
-
-    transition: color 0.5s ease, opacity 0.5s ease, background-color 0.5s ease, transform 0.4s ease;
-
     text-decoration: none;
+
+    box-shadow: 0 0 10px #3b3838;
+
+    transition: color 0.5s ease, opacity 0.5s ease, background-color 0.5s ease, transform 0.4s ease;
 }
 
-.back a:hover {
+#links a:active{
+    transform: scale(0.9);
+}
+
+a:hover {
     background-color: #111;
     box-shadow: 0 0 20px #8006da;
     text-shadow: 0 0 20px #8006da;
     transform: scale(1.1);
+}
+
+a:visited {
+    color: white;
 }
 
 /*lines*/
@@ -253,13 +158,15 @@ main{
     position: absolute;
     width: 1px;
     height: 200vh;
+    /*background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);*/
     top: -30vh;
     left: 50%;
+    /* background: rgba(255, 255, 255, 0.1); */
     overflow: hidden;
     transform: rotate(-45deg);
 }
 
-.line:after {
+.line::after {
     content: "";
     display: block;
     position: absolute;
@@ -301,110 +208,58 @@ main{
 
 /*Stars*/
 #particles-js {
-    z-index: 3;
     position: absolute;
     top: 0;
 
-
-    height: 100%;
+    height: 100vh;
     width: 100vw;
 
+    /*background-color: #000000;*/
+    /*background-image: url("");*/
     background-repeat: no-repeat;
     background-size: cover;
+    /*background-position: 50% 50%;*/
 }
 
-/* Mobile view */
+/*Mobile view*/
 @media screen and (max-width: 600px) {
     body {
         font-size: 18px;
     }
 
     h1 {
-        font-size: 4em;
-        height: auto;
+        font-size: 3em;
+        height: 30vh;
     }
 
     p {
         font-size: 1em;
-        height: auto;
+        height: 40vh;
     }
+    a{
+        z-index: 2;
 
-    @media screen and (max-width: 360px) {
-        body {
-            font-size: 16px;
-        }
+        width: 200px;
 
-        h1 {
-            z-index: 500;
-
-            height: 5px;
-
-            font-size: 2.5em;
-        }
-
-        p {
-            font-size: 1em;
-        }
+        font-size: 1em;
     }
+}
+@media screen and (max-width: 360px) {
+    body {
+        font-size: 16px;
+    }
+    h1 {
+        font-size: 3em;
+    }
+    p {
+        font-size: 0.8em;
+    }
+}
+@media (width <= 660px) {
 
-    @media (max-width: 660px) {
-        .content {
+    .links {
+        flex-direction: column;
 
-            transform: translateY(5%);
-
-            gap: 10vh;
-        }
-
-        .about_content {
-            gap: 20px;
-
-            padding: 10px;
-            margin: 10px;
-            max-width: 100vw;
-        }
-
-        .info {
-
-            opacity: 80%;
-            flex-direction: column;
-            max-height: max-content;
-            max-width: max-content;
-            width: 85vw;
-            font-size: 0.75em;
-            transform: translateY(-18%);
-            box-sizing: border-box;
-        }
-
-        .info a{
-
-
-            margin: 0;
-            padding: 0;
-        }
-
-        .languageSwitch{
-            width: max-content;
-            align-content: center;
-            align-items: center;
-            align-self: center;
-        }
-
-        .back {
-            z-index: 1;
-
-            padding: 8px;
-            margin: 0 auto;
-            max-width: 90%;
-            min-width: auto;
-
-            font-size: 14px;
-            transform: translateY(800px);
-        }
-
-            .back:hover {
-            box-shadow: 0 0 15px #8006da;
-            text-shadow: 0 0 15px #8006da;
-            transform: scale(1.05) translateY(-80px);
-        }
+        transform: translateY(-40px);
     }
 }
