--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ h1 {
 }
 
 .links {
-    position: relative;
+    /*position: relative;*/
     z-index: 1;
 
     display: flex;
@@ -259,7 +259,10 @@ a:visited {
 
     .links {
         flex-direction: column;
-
+        align-content: center;
+        align-items: center;
+        align-self: center;
+        max-width: max-content;
         transform: translateY(-40px);
     }
 }
